--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -11,8 +11,8 @@
   "NX/COLOUR/R/PRE": "",
   "NX/COLOUR/RESET": "",
   "HOME": "Mega Hack",
-  "HOME/LANGUAGE": "",
-  "HOME/SEARCH": "",
+  "HOME/LANGUAGE": "Idioma",
+  "HOME/SEARCH": "Buscar",
   "BYPASS": "",
   "BYPASS/HACK_MAIN_LEVELS": "",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "",
