--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -13,7 +13,7 @@
   "HOME": "Mega Hack",
   "HOME/LANGUAGE": "Idioma",
   "HOME/SEARCH": "Buscar",
-  "BYPASS": "",
+  "BYPASS": "Derivación",
   "BYPASS/HACK_MAIN_LEVELS": "",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "",
   "BYPASS/HACK_MUSIC_UNLOCKER": "",
